[FEATURE] Add mail-service and add RoomType model